[gd_scene load_steps=3 format=3 uid="uid://c2rxm4oown5nh"]

[ext_resource type="Theme" uid="uid://bif7w43bcgo83" path="res://ui/themes/pause/pause_menu.tres" id="1_6tybw"]
[ext_resource type="Script" path="res://ui/pause_menu/pause_dialog.gd" id="1_maqxt"]

[node name="PauseDialog" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme = ExtResource("1_6tybw")
script = ExtResource("1_maqxt")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "RESUME"

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 6
text = "SETTINGS"

[node name="MarginContainer3" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_vertical = 6
text = "MAIN MENU"

[node name="MarginContainer4" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitGameButton" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2
size_flags_vertical = 6
text = "QUIT GAME"

[connection signal="pressed" from="CenterContainer/VBoxContainer/MarginContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MarginContainer2/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MarginContainer3/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MarginContainer4/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
